# hooo

./: .gitignore  Cargo.toml  README.md
assets/: syntax-lib.txt  syntax-script.txt  syntax.txt
assets/help/: and.txt  app.txt  help.txt  qubit.txt  tactic.txt
examples/: hooo.rs
source/alg/: Hooo.config  associative.hooo  commutative.hooo  reflexive.hooo  transitivity.hooo
source/and/: and_fst_fa.hooo  and_fst_tr.hooo  and_snd_fa.hooo  and_snd_tr.hooo  and_to_eq.hooo  eq_to_and.hooo  fst.hooo  snd.hooo
source/app/: app_imply.hooo  app_subst.hooo  app_ty.hooo
source/dep/: Hooo.config  dep.hooo
source/eq/: transitivity.hooo  transport.hooo
source/hooo/: false_from_true.hooo  higher_order_lift_eq_refl.hooo  imply.hooo  imply_left.hooo  imply_right.hooo  lift_eq_refl.hooo  lower_true.hooo  tr_eq.hooo  transport_tr.hooo
source/hott/: Hooo.config  README.md  contr.hooo  hcontr.hooo  hlev.hooo  hprop.hooo  interval.hooo
source/imply/: left_true.hooo  modus_ponens.hooo  modus_tollens.hooo  right_true.hooo  to_rimply.hooo  transitivity.hooo
source/or/: imply_left.hooo  imply_right.hooo
source/primitives/: and.hooo  eq.hooo  imply.hooo  or.hooo  pow.hooo  qual.hooo  ty.hooo  wave.hooo
source/qu/: Hooo.config  ps.hooo  qu.hooo
source/qual/: left.hooo  lift.hooo  right.hooo  symmetry-without-sym.hooo  transitivity-without-qual.hooo  transitivity.hooo
source/qubit/: from_qual.hooo  qual_def.hooo  qual_def2.hooo  subst.hooo  to_qual.hooo
source/sesh/: to_not_qu.hooo  to_qu_not.hooo
source/std/: .cong.hooo.swp  .nat_add.hooo.swp  Hooo.config  absorption.hooo  and.hooo  auto_qu.hooo  ava.hooo  bool.hooo  c_imply.hooo  comp.hooo  cong.hooo  de_morgan.hooo  (+46 more)
src/: context.rs  cycle_detector.rs  grader.rs  lib.rs  meta_cache.rs  parsing.rs  repl.rs  tactic.rs  transform.rs  user_input.rs
tests/: lib.rs
(+16 files in other folders)
