[package]
name = "hooo"
version = "0.1.0"
edition = "2021"
keywords = ["advancedresearch", "theorem", "proving", "assistant", "exponentials"]
description = "Propositional logic with exponentials"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/advancedresearch/hooo.git"
homepage = "https://github.com/advancedresearch/hooo"
exclude = ["source/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_meta = "2.0.1"
